[package]
name = "bulletphysics-bind"
version = "0.0.0"
edition = "2021"
description = "Bullet Physics WebAssembly bindings"
repository = "https://github.com/noname0310/babylon-bulletphysics"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "parallel"]
parallel = ["rayon", "wasm-bindgen-rayon"]

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 3

[dependencies]
wasm-bindgen = "=0.2.93"
console_error_panic_hook = { version = "0.1.7", optional = true }
byte-slice-cast = "1.2.2"
num-traits = "0.2.19"
glam = { version = "0.29.2", features = ["debug-glam-assert", "fast-math"] }
rayon = { version = "1.10.0", optional = true }
wasm-bindgen-rayon = { version = "=1.2.2", optional = true }
thread-id = "5.0.0"
wasm_sync = "0.1.2"
rustc-hash = "2.1.0"
printf-compat = "0.1.1"

[dependencies.web-sys]
version = "0.3.70"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3.43"

[build-dependencies]
cc = "=1.1.31"
